s3 storage and follows table added with apis

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DATABASE_URL=postgresql://user:password@localhost/mydatabase
-AWS_ACCESS_KEY_ID=your_access_key_id
-AWS_SECRET_ACCESS_KEY=your_secret_access_key
-AWS_S3_BUCKET_NAME=your_bucket_name
+DATABASE_URL="postgresql://user:password@localhost/mydatabase"
+AWS_ACCESS_KEY_ID = "AKIA6ODU5TISOMPCOVMW"
+AWS_SECRET_ACCESS_KEY = "VF8IJxra7T3KrXXRCegBVUPj4V/UQe6pTuF3zc8f"
+AWS_REGION_NAME = "ap-south-1"
+AWS_S3_BUCKET_NAME = "untrippdtest1"
