--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DATABASE_URL="postgresql://user:password@localhost/mydatabase"
-AWS_ACCESS_KEY_ID = "AKIA6ODU5TISOMPCOVMW"
-AWS_SECRET_ACCESS_KEY = "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"
-AWS_REGION_NAME = "ap-south-1"
-AWS_S3_BUCKET_NAME = "untrippdtest1"
+DATABASE_URL=""
+AWS_ACCESS_KEY_ID = ""
+AWS_SECRET_ACCESS_KEY = ""
+AWS_REGION_NAME = ""
+AWS_S3_BUCKET_NAME = ""
